--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
 spring.application.name=marketplace
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=unisabana
-spring.data.mongodb.password=educo
 spring.data.mongodb.database=marketplace
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb+srv://admin:4Rc9Sn6OCz5S7Mcv@marketplace.yp9n9dg.mongodb.net/?retryWrites=true&w=majority&appName=MarketPlace
